# waveshare-esp32s3-7-inch-eez-ui

./: .ui_import_config  LICENSE  README.md  import_eez_ui.py  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
backup/templates/: CMakeLists.txt  actions.c  eez-flow.h
backup/ui/: README.md
components/ui/: CMakeLists.txt  actions.c  eez-flow.cpp  eez-flow.h  screens.c  screens.h  ui.c
example-eez-project/name_here/: name_here.eez-project  name_here.eez-project-ui-state
example/eez-project/project_name/: paroject_name.eez-project-ui-state
example/eez-project/project_name/src/ui/: screens.c
main/: CMakeLists.txt  lvgl_port.c  main.c  waveshare_rgb_lcd_port.c  waveshare_rgb_lcd_port.h
templates/: CMakeLists.txt  actions.c
